--- a/TestesUnitarios/pom.xml
+++ b/TestesUnitarios/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.ce.wcaquino</groupId>
+  <groupId>br.ce</groupId>
   <artifactId>TestesUnitarios</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
@@ -25,5 +25,12 @@
 	  	<artifactId>powermock-module-junit4</artifactId>
 	  	<version>1.6.6</version>
 	  </dependency>
+	  <dependency>
+		<groupId>org.powermock</groupId>
+		<artifactId>powermock-reflect</artifactId>
+		<version>1.6.1</version>
+	  </dependency>
+<!-- Thanks for using https://jar-download.com -->
+
   </dependencies>
 </project>
